# Sewing-machine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
data/medium/: 1.fasta  2.fasta
data/small/test_1/: 1.fasta  2.fasta
data/small/test_2/: 1.fasta  2.fasta
data/small/test_3/: 1.fasta
data/small/test_4/: 1.fasta  2.fasta
include/: needle.h
runs/: CMakeLists.txt  bench1.cpp  data.txt  gen_verification.cpp  slowread_bench1.cpp
src/: CMakeLists.txt  needle.cpp  needle_1d.cpp  needle_diag_cache.cpp  needle_diag_par.cpp
src/baseline/: CMakeLists.txt  base.cpp  base.h
src/utils/: CMakeLists.txt  fasta_read.cpp  fasta_read.h  utils.cpp  utils.h
utils/: fasta_read.c  fasta_read.h
